--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-spring/native": "^9.7.2",
@@ -21,11 +22,16 @@
     "react-native-charts-wrapper": "^0.5.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-multiple-picker": "^0.0.21",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "react-native-wheely": "^0.6.0",
+    "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
